--- a/pertemuan-22/package.json
+++ b/pertemuan-22/package.json
@@ -10,6 +10,11 @@
   "author": "sabardi",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3"
+  },
+  "devDependencies": {
+    "vite": "^5.2.8",
+    "vitest": "^1.4.0"
   }
 }
