--- a/pertemuan-23/package.json
+++ b/pertemuan-23/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "sass": "^1.75.0",
     "vite": "^5.2.8"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3"
   }
+  
 }
