--- a/pertemuan-24/package.json
+++ b/pertemuan-24/package.json
@@ -6,18 +6,19 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "glob": "^10.3.12",
     "sass": "^1.75.0",
     "vite": "^5.2.8"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
-    "glob": "^10.3.12"
+    "bootstrap": "^5.3.3"
   }
 }
